@@ -3,14 +3,17 @@ package com.example.restaurant.service;
 import com.example.restaurant.dto.VisitorRatingRequestDTO;
 import com.example.restaurant.dto.VisitorRatingResponseDTO;
 import com.example.restaurant.entity.Restaurant;
+import com.example.restaurant.entity.Visitor;
 import com.example.restaurant.entity.VisitorRating;
 import com.example.restaurant.mapper.VisitorRatingMapper;
 import com.example.restaurant.repository.RestaurantRepository;
 import com.example.restaurant.repository.VisitorRatingRepository;
+import com.example.restaurant.repository.VisitorRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,28 +21,38 @@ public class VisitorRatingService {
 
     private final VisitorRatingRepository ratingRepository;
     private final RestaurantRepository restaurantRepository;
+    private final VisitorRepository visitorRepository;
     private final VisitorRatingMapper mapper;
     private final RestaurantService restaurantService;
 
     public VisitorRatingResponseDTO create(VisitorRatingRequestDTO dto) {
+    
+        Visitor visitor = visitorRepository.findById(dto.visitorId())
+                .orElseThrow(() -> new IllegalArgumentException("Посетитель не найден: " + dto.visitorId()));
+        Restaurant restaurant = restaurantRepository.findById(dto.restaurantId())
+                .orElseThrow(() -> new IllegalArgumentException("Ресторан не найден: " + dto.restaurantId()));
+
         VisitorRating rating = mapper.toEntity(dto);
-        ratingRepository.save(rating); 
-        updateRestaurantAverageRating(dto.restaurantId());
+        rating.setVisitor(visitor);
+        rating.setRestaurant(restaurant);
+
+       
+        ratingRepository.save(rating);
+
+        updateRestaurantAverageRating(restaurant.getId());
+
         return mapper.toResponseDTO(rating);
     }
 
-
-    public VisitorRatingResponseDTO update(Long visitorId, Long restaurantId, VisitorRatingRequestDTO dto) {
-        VisitorRating rating = ratingRepository.findById(visitorId, restaurantId)
-                .orElseThrow(() -> new IllegalArgumentException(
-                        "RРейтинг не найден для visitorId=" + visitorId + " и restaurantId=" + restaurantId
-                ));
+    public VisitorRatingResponseDTO update(Long ratingId, VisitorRatingRequestDTO dto) {
+        VisitorRating rating = ratingRepository.findById(ratingId)
+                .orElseThrow(() -> new IllegalArgumentException("Рейтинг не найден: " + ratingId));
 
         rating.setRating(dto.rating());
         rating.setComment(dto.comment());
 
         ratingRepository.save(rating);
-        updateRestaurantAverageRating(rating.getRestaurantId());
+        updateRestaurantAverageRating(rating.getRestaurant().getId());
 
         return mapper.toResponseDTO(rating);
     }
@@ -48,29 +61,32 @@ public class VisitorRatingService {
         return ratingRepository.findAll()
                 .stream()
                 .map(mapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public VisitorRatingResponseDTO getById(Long visitorId, Long restaurantId) {
-        VisitorRating rating = ratingRepository.findById(visitorId, restaurantId)
-                .orElseThrow(() -> new IllegalArgumentException(
-                        "Рейтинг не найден для visitorId=" + visitorId + " и restaurantId=" + restaurantId
-                ));
+    public VisitorRatingResponseDTO getById(Long ratingId) {
+        VisitorRating rating = ratingRepository.findById(ratingId)
+                .orElseThrow(() -> new IllegalArgumentException("Рейтинг не найден: " + ratingId));
         return mapper.toResponseDTO(rating);
     }
 
-    public void delete(Long visitorId, Long restaurantId) {
-        ratingRepository.remove(visitorId, restaurantId);
+    public void delete(Long ratingId) {
+        VisitorRating rating = ratingRepository.findById(ratingId)
+                .orElseThrow(() -> new IllegalArgumentException("Рейтинг не найден: " + ratingId));
+
+        Long restaurantId = rating.getRestaurant().getId();
+        ratingRepository.delete(rating);
         updateRestaurantAverageRating(restaurantId);
     }
 
     private void updateRestaurantAverageRating(Long restaurantId) {
-        Restaurant restaurant = restaurantRepository.findById(restaurantId);
+        Restaurant restaurant = restaurantRepository.findById(restaurantId)
+                .orElseThrow(() -> new IllegalArgumentException("Ресторан не найден: " + restaurantId));
 
-        List<Integer> ratings = ratingRepository.findAll().stream()
-                .filter(r -> r.getRestaurantId().equals(restaurantId))
+        List<Integer> ratings = ratingRepository.findAllByRestaurant(restaurant)
+                .stream()
                 .map(VisitorRating::getRating)
-                .toList();
+                .collect(Collectors.toList());
 
         restaurantService.updateAverageRating(restaurantId, ratings);
     }
